Fix logo list overflow bug and restyle author bio

--- a/src/assets/css/components/_author.scss
+++ b/src/assets/css/components/_author.scss
@@ -8,14 +8,19 @@
     margin: 0;
   }
 
-  &--post {
-    margin-top: 1.5rem;
+  &--workshop {
+    .author__bio-text {
+      color: var(--color-gray);
+    }
+
+    & + & {
+      padding-top: 1.5rem;
+      border-top: 0.0625rem solid currentColor;
+    }
   }
 
-  &--workshop {
-    .author__text-wrapper {
-      flex: 1 1 50%;
-    }
+  &--post {
+    margin-top: 1.5rem;
   }
 
   & + & {
@@ -44,13 +49,13 @@ a.author__name {
   text-decoration: underline;
 }
 
+.author__text-wrapper {
+  flex: 1 1 50%;
+}
+
 .author__bio {
   display: flex;
   gap: 1rem;
-}
-
-.author__bio-text {
-  flex: 1 1 auto;
 }
 
 .author__twitter {
@@ -60,29 +65,7 @@ a.author__name {
 }
 
 .author__paragraph {
+  margin-top: 0.5rem;
   flex: 1 1 auto;
-  margin-top: 1rem;
   line-height: 1.3;
-  padding-top: 1rem;
-  border-top: 0.0625rem solid currentColor;
-}
-
-@media (min-width: 48em) {
-  .author {
-    &--workshop {
-      .author__text-wrapper {
-        flex: 1 1 25%;
-      }
-    }
-  }
-
-  .author__paragraph {
-    flex: 0 1 55%;
-    margin-top: 0;
-    padding-top: 0;
-    margin-left: 1.25rem;
-    padding-left: 1.25rem;
-    border-top: 0;
-    border-left: 0.0625rem solid currentColor;
-  }
 }
